--- a/HenrysBookstore/Content/Site.css
+++ b/HenrysBookstore/Content/Site.css
@@ -1,12 +1,14 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image:url("Images/wood.jpg");
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-color:lightgoldenrodyellow
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -21,4 +23,47 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.topbar{
+    width:900px;
+    height:250px;
+    margin-bottom:20px;
+}
+.titlebar{
+    background-image:url("Images/books.jpg");
+    height:204px;
+    margin-left:30px;
+    margin-right:30px;
+    padding-top:50px;
+}
+.internaluseonlybar{
+    margin-left:30px;
+    margin-right:30px;
+    margin-top:10px;
+    margin-bottom:30px;
+    height:30px;
+    background-color:gray;
+    text-align:center;
+
+}
+.henrysbookstoretitle{
+    color:white;
+    text-align:center;
+    vertical-align:middle;
+    /*margin-top:auto;
+    margin-bottom:auto;*/
+    font-size:60px;
+    height:50px;
+    /*display:table-cell;
+    min-height:10em;*/
+}
+
+.body-container {
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color:lightgoldenrodyellow;
+    width:843px;
+    margin-left:30px;
+    margin-right:30px;
 }
