--- a/HenrysBookstore/Content/Site.css
+++ b/HenrysBookstore/Content/Site.css
@@ -97,3 +97,21 @@ footer{
 .whitelink{
     color:white;
 }
+
+.sidebarwrapper{
+    background-color:white;
+    border: 2px solid black;
+    padding:6px;
+}
+
+.sidebarlinks{
+    list-style-type:none;
+}
+.sidebarcolumn{
+    float:left;
+    width:250px;
+}
+.content-wrapper{
+    margin-left:250px;
+    padding-left:20px;
+}
