contact  management page is in

--- a/HenrysBookstore/Views/Shared/_sidebar.cshtml
+++ b/HenrysBookstore/Views/Shared/_sidebar.cshtml
@@ -6,6 +6,6 @@
         <li>@Html.ActionLink("Browse Inventory", "Inventory", "Home")</li>
         <li>@Html.ActionLink("Browse by Author", "Author", "Home")</li>
         <li>@Html.ActionLink("Browse by Location", "Location", "Home")</li>
-        <li>@Html.ActionLink("Contact Management", "Contact", "Home")</li>
+        <li>@Html.ActionLink("Contact Management", "ContactManagement", "Home")</li>
     </ul>
 </div>
